--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
 
                 <div class="d-md-flex justify-content-center mt-5">
                         <!-- <div class="btn btn-success btn-lg mb-3 mb-sm-0 me-3 text-nowrap">Free Trial Lesson</div> -->
-                        <button type="button" class="btn btn-success btn-lg mb-3 mb-sm-0 me-3 text-nowrap" data-bs-toggle="modal" data-bs-target="#trialModal">
-                            Free Trial Lesson
-                        </button>
-                        <div class="btn btn-primary btn-lg mt-3 mt-sm-0 ms-3 text-nowrap">Download Info Pack</div>
+                        <button type="button" class="btn btn-success btn-lg mb-3 mb-sm-0 me-3 text-nowrap" data-bs-toggle="modal" data-bs-target="#trialModal"><i class="fas fa-music fa-sm"></i> Free Trial Lesson</button>
+                        <div class="btn btn-primary btn-lg mt-3 mt-sm-0 ms-3 text-nowrap"><i class="fas fa-file-pdf fa-sm"></i> Download Info Pack</div>
                 </div>
             </div>
             <div class="col-lg-3 col-xxl-2 d-flex p-5 flex-column justify-content-center filter text-light text-center">
@@ -40,9 +38,9 @@
                 <a role="button" class="btn text-light text-nowrap" href="mailto:info@dacapomusic.ca"><i class="fas fa-envelope"></i> info@dacapomusic.ca</a>
             </div>
 
-        </div>
-        <!--/row-->
-    </div>
+        </div><!--/row-->
+    </div><!--/header container-->
+
 
 <!-- navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light p-0 sticky-top mb-5">
@@ -278,7 +276,7 @@
           <div class="col-md-12 col-lg-8">
             <div class="card-body text-center text-lg-start">
               <h4 class="card-title mb-2 ovo text-uppercase"><strong>Convenient Location</strong></h4>
-              <p class="card-text">Humbertown Plaza: free parking, shops and cafés</p>
+              <p class="card-text">Humbertown Plaza: free parking, shops and cafés.</p>
             </div>
           </div>
       </div>
@@ -321,29 +319,47 @@
     <div class="card p-0 my-3 mx-md-4" style="width: 18rem;">
         <img src="img/teachers/raul2.jpg" class="card-img-top img-thumbnail" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Raul Pineda</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h4 class="card-title ovo text-center"><strong>Raul Pineda</strong></h4>
+          <p class="card-text">Originally from Havana, Cuba, Raul Pineda started his musical career at the age of eight. Dazzled by the sounds of drums and percussion...</p>
+          <div class="text-center">
+            <a href="teachers.html#raul" class="btn btn-primary">read more</a>
+          </div>
         </div>
     </div>
 
       <div class="card p-0 my-3 mx-md-4" style="width: 18rem;">
         <img src="img/teachers/andrew2.jpg" class="card-img-top img-thumbnail" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Andrew Marzotto</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h4 class="card-title ovo text-center"><strong>Andrew Marzotto</strong></h4>
+          <p class="card-text">Andrew Marzotto is a Toronto born and based guitarist, composer and educator. He is a 2016 graduate of the Berklee College of Music...</p>
+          <div class="text-center">
+            <a href="teachers.html#andrew" class="btn btn-primary">read more</a>
+          </div>
         </div>
       </div>
 
       <div class="card p-0 my-3 mx-md-4" style="width: 18rem;">
-        <img src="img/teachers/terry2.jpg" class="card-img-top img-thumbnail" alt="...">
+        <img src="img/teachers/yeri.png" class="card-img-top img-thumbnail" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Terry Babyuk</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h4 class="card-title ovo text-center"><strong>Yeri Lim</strong></h4>
+          <p class="card-text">Yeri is a Toronto based pianist. She started playing piano at the age of 6 and has been studying diverse genres of music such as classical, Korean classical...</p>
+          <div class="text-center">
+            <a href="teachers.html#yeri" class="btn btn-primary">read more</a>
+          </div>
         </div>
       </div>
+
+      <div class="card p-0 my-3 mx-md-4" style="width: 18rem;">
+        <img src="img/teachers/jonathan3.jpg" class="card-img-top img-thumbnail" alt="...">
+        <div class="card-body">
+          <h4 class="card-title ovo text-center"><strong>Jonathan Stuchbery</strong></h4>
+          <p class="card-text">Andrew Marzotto is a Toronto born and based guitarist, composer and educator. He is a 2016 graduate of the Berklee College of Music...</p>
+          <div class="text-center">
+            <a href="teachers.html#jonathan" class="btn btn-primary">read more</a>
+          </div>
+        </div>
+      </div>
+
     </div>
 
 </div><!--/teachers section-->
