--- a/teachers.html
+++ b/teachers.html
@@ -15,35 +15,36 @@
 </head>
 <body>
 
-    <div class="container-fluid bg-dcam bg-light">
-        <div class="row">
+  <div class="container-fluid bg-dcam bg-light">
+    <div class="row">
 
-            <div class="col-md-3 col-lg-3 col-xxl-3 p-3 text-center text-lg-left">
-                <img class="img-fluid w-75" src="img/logo.png" alt="Da Capo Academy of Music Logo">
-            </div>
-
-            <div class="col-md-5 col-lg-6 col-xxl-7 text-center p-5">
-                <h1 class="display-4 ovo">Music Lessons in Etobicoke</h1>
-                <p class="lead">Discover the joy that music can bring, register for your free trial today!</p>
-
-                <div class="d-md-flex justify-content-center pt-3">
-                    <div class="btn btn-warning btn-lg mb-3 mb-sm-0 me-sm-3 text-nowrap">Free Trial Lesson</div>
-                    <div class="btn btn-primary btn-lg mt-3 mt-sm-0 text-nowrap">Download Info Pack</div>
-                </div>
-            </div>
-            <div class="col-md-4 col-lg-3 col-xxl-2 d-flex p-5 flex-column justify-content-center filter text-light text-center">
-                <h3 class="ovo">Contact Us:</h3>
-                <a role="button" class="btn text-light text-nowrap" href="tel:+14162379595"><i class="fas fa-phone"></i> (416) 237-9595</a>
-                <a role="button" class="btn text-light text-nowrap" href="mailto:info@dacapomusic.ca"><i class="fas fa-envelope"></i> info@dacapomusic.ca</a>
-            </div>
-
+        <div class="col-lg-3 col-xxl-3 p-3 text-center text-lg-left">
+            <img class="img-fluid w-75" src="img/logo.png" alt="Da Capo Academy of Music Logo">
         </div>
-        <!--/row-->
-    </div>
+
+        <div class="col-lg-6 col-xxl-7 text-center p-5">
+            <h1 class="display-4 ovo">Music Lessons in Etobicoke</h1>
+            <p class="lead">Discover the joy that music can bring, register for your free trial today!</p>
+
+            <div class="d-md-flex justify-content-center mt-5">
+                    <!-- <div class="btn btn-success btn-lg mb-3 mb-sm-0 me-3 text-nowrap">Free Trial Lesson</div> -->
+                    <button type="button" class="btn btn-success btn-lg mb-3 mb-sm-0 me-3 text-nowrap" data-bs-toggle="modal" data-bs-target="#trialModal"><i class="fas fa-music fa-sm"></i> Free Trial Lesson</button>
+                    <div class="btn btn-primary btn-lg mt-3 mt-sm-0 ms-3 text-nowrap"><i class="fas fa-file-pdf fa-sm"></i> Download Info Pack</div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-xxl-2 d-flex p-5 flex-column justify-content-center filter text-light text-center">
+            <h3 class="ovo">Contact Us:</h3>
+            <a role="button" class="btn text-light text-nowrap" href="tel:+14162379595"><i class="fas fa-phone"></i> (416) 237-9595</a>
+            <a role="button" class="btn text-light text-nowrap" href="mailto:info@dacapomusic.ca"><i class="fas fa-envelope"></i> info@dacapomusic.ca</a>
+        </div>
+
+    </div><!--/row-->
+</div><!--/header container-->
+
 
 <!-- navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light p-0 sticky-top">
-  <div class="container-fluid dcam-blue-dark">
+  <div class="container-fluid dcam-blue-reg">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -90,7 +91,7 @@
 <div class="container mt-5">
 
         <h3 class="display-4 text-muted">Teachers</h3>
-        <hr>
+        <hr id="raul">
 
         <div class="card mb-3 my-5 no-border mx-auto" style="max-width: 900px;">
             <div class="row">
@@ -107,7 +108,7 @@
             </div>
           </div>
 
-          <hr class="my-5">
+          <hr class="my-5" id="andrew">
 
           <div class="card mb-3 my-5 no-border mx-auto" style="max-width: 900px;">
             <div class="row">
@@ -124,7 +125,7 @@
             </div>
           </div>
 
-          <hr class="my-5">
+          <hr class="my-5" id="yeri">
 
           <div class="card mb-3 my-5 no-border mx-auto" style="max-width: 900px;">
             <div class="row">
@@ -141,7 +142,7 @@
             </div>
           </div>
 
-          <hr class="my-5">
+          <hr class="my-5" id="jonathan">
 
           <div class="card mb-3 my-5 no-border mx-auto" style="max-width: 900px;">
             <div class="row">
