added dropdown menu to navbar

--- a/contact.html
+++ b/contact.html
@@ -43,48 +43,58 @@
 
 
 <!-- navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light p-0 sticky-top">
-  <div class="container-fluid dcam-blue-reg">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-        <div class="collapse navbar-collapse navbar-dark" id="navbarNav">
-            <ul class="navbar-nav mx-auto roboto text-uppercase">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Music Lessons</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="rates.html">Rates</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="teachers.html">Teachers</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Reviews</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Gallery</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Blog</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Shop</a>
-                </li>
-            </ul>
-        </div>
-  </div>
-</nav><!--/navbar-->
-
+<nav class="navbar navbar-expand-lg navbar-light bg-light p-0 sticky-top mb-5">
+    <div class="container-fluid dcam-blue-reg">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+          <div class="collapse navbar-collapse navbar-dark" id="navbarNav">
+              <ul class="navbar-nav mx-auto roboto text-uppercase">
+                  <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Music Lessons</a>
+                      <ul class="dropdown-menu dcam-blue-reg" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Piano Lessons</a></li>
+                        <li><a class="dropdown-item" href="#">Guitar Lessons</a></li>
+                        <li><a class="dropdown-item" href="#">Drum Lessons</a></li>
+                        <li><a class="dropdown-item" href="#">Voice Lessons</a></li>
+                        <li><a class="dropdown-item" href="#">Music Theory</a></li>
+                        <li><a class="dropdown-item" href="#">Intro to Music Program</a></li>
+                        <li><a class="dropdown-item" href="#">Toddler Classes</a></li>
+                      </ul>
+                  </li>
+  
+                  <li class="nav-item">
+                      <a class="nav-link" href="rates.html">Rates</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="teachers.html">Teachers</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">Reviews</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">Gallery</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">About Us</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="contact.html">Contact</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">Blog</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#">Shop</a>
+                  </li>
+              </ul>
+          </div>
+    </div>
+  </nav><!--/navbar-->
+  
 
 <div class="container mt-5">
     <div class="row d-flex justify-content-center">
