--- a/index.html
+++ b/index.html
@@ -53,9 +53,19 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Music Lessons</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Music Lessons</a>
+                    <ul class="dropdown-menu dcam-blue-reg" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="#">Piano Lessons</a></li>
+                      <li><a class="dropdown-item" href="#">Guitar Lessons</a></li>
+                      <li><a class="dropdown-item" href="#">Drum Lessons</a></li>
+                      <li><a class="dropdown-item" href="#">Voice Lessons</a></li>
+                      <li><a class="dropdown-item" href="#">Music Theory</a></li>
+                      <li><a class="dropdown-item" href="#">Intro to Music Program</a></li>
+                      <li><a class="dropdown-item" href="#">Toddler Classes</a></li>
+                    </ul>
                 </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="rates.html">Rates</a>
                 </li>
