--- a/teachers.html
+++ b/teachers.html
@@ -51,7 +51,7 @@
         <div class="collapse navbar-collapse navbar-dark" id="navbarNav">
             <ul class="navbar-nav mx-auto roboto text-uppercase">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Music Lessons</a>
