added a footer to index.html, made logo clickable on all pages

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="row">
 
             <div class="col-lg-3 col-xxl-3 p-3 text-center text-lg-left">
-                <img class="img-fluid w-75" src="img/logo.png" alt="Da Capo Academy of Music Logo">
+                <a href="#"><img class="img-fluid w-75" src="img/logo.png" alt="Da Capo Academy of Music Logo"></a>
             </div>
 
             <div class="col-lg-6 col-xxl-7 text-center p-5">
@@ -375,9 +375,106 @@
 </div><!--/teachers section-->
 
 
+<!-- BEFORE FOOTER SECTION -->
+
+<div class="container py-5">
+  <div class="row">
+    This is a row
+
+  </div>
+
+</div>
 
 <!-- FOOTER SECTION -->
+<div class="container-fluid">
+  <div class="row">
 
+      <div class="col-lg-3 dcam-blue-dark py-3">
+          <h5 class="text-light ovo">FOLLOW US:</h5>
+          <a href="https://www.facebook.com/dacapomusic.ca/"><i class="fab fa-facebook-square fa-3x ps-0 pe-2"></i></a>
+          <a href="https://www.instagram.com/dacapomusic.ca/"><i class="fab fa-instagram-square fa-3x p-2"></i></a>
+          <a href="https://www.youtube.com/watch?v=gSPAOkyO4AA"><i class="fab fa-youtube-square fa-3x p-2"></i></a>
+      </div>
+
+      <div class="col-lg-3 dcam-blue-dark py-3">
+        <h5 class="text-light ovo">WHAT WE OFFER:</h5>
+        <ul class="nav flex-column">
+          <li class="nav-item">
+            <a class="nav-link py-1 ps-0" href="#">Piano Lessons</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link py-1 ps-0" href="#">Guitar Lessons</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link py-1 ps-0" href="#">Drum Lessons</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link py-1 ps-0" href="#">Voice Lessons</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link py-1 ps-0" href="#">Theory Lessons</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link py-1 ps-0" href="#">Intro to Music Program</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link py-1 ps-0" href="#">Toddler Classes</a>
+          </li>
+
+        </ul>
+
+      </div>
+
+      <div class="col-lg-3 dcam-blue-dark py-3">
+        <h5 class="text-light ovo">LEARN MORE:</h5>
+
+        <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link py-1 ps-0" href="#">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link py-1 ps-0" href="#">Teachers</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link py-1 ps-0" href="#">Rates</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link py-1 ps-0" href="#">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link py-1 ps-0" href="#">Shop</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link py-1 ps-0" href="#">Privacy Policy</a>
+            </li>
+        </ul>
+
+      </div>
+
+      <div class="col-lg-3 dcam-blue-dark py-3">
+          <h5 class="text-light ovo">CONTACT US:</h5>
+
+        <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link ps-0" href="tel:+14162379595"><i class="fas fa-phone"></i> (416) 237-9595</a>
+            </li>
+            <li class="nav-item">
+              <a  class="nav-link ps-0" href="mailto:info@dacapomusic.ca"><i class="fas fa-envelope"></i> info@dacapomusic.ca</a>
+            </li>
+            <li class="nav-item">
+              <a  class="nav-link ps-0" href="https://g.page/dacapomusic-ca?share" target="_blank"><i class="fas fa-map-marker-alt"></i> 270 The Kingsway,<br> Etobicoke, ON<br> M9A 3T7<br>(Humbertown Shopping Centre)</a>
+            </li>
+
+        </ul>
+          
+          <div class="d-flex flex-column">
+          </div>
+      </div>
+      <div class="col-12 text-muted bg-dark py-2 text-center">
+          <small>&copy 2021 Da Capo Academy of Music Inc.</small>
+      </div>
+  </div><!--/row-->
+</div>
 
 
 
