--- a/rates.html
+++ b/rates.html
@@ -19,7 +19,7 @@
         <div class="row">
 
             <div class="col-lg-3 col-xxl-3 p-3 text-center text-lg-left">
-                <img class="img-fluid w-75" src="img/logo.png" alt="Da Capo Academy of Music Logo">
+                <a href="index.html"><img class="img-fluid w-75" src="img/logo.png" alt="Da Capo Academy of Music Logo"></a>
             </div>
 
             <div class="col-lg-6 col-xxl-7 text-center p-5">
