improved footer on index.html and made it responsive

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
 
 <!-- TEACHERS SECTION -->
-<div class="container-fluid dcam-blue-dark py-5">
+<div class="container-fluid dcam-blue-reg py-5">
 
   <!--teachers section header-->
   <div class="col-md-12 text-center mb-5 text-light">
@@ -389,80 +389,80 @@
 <div class="container-fluid">
   <div class="row">
 
-      <div class="col-lg-3 dcam-blue-dark py-3">
+      <div class="col-sm-6 col-lg-3 dcam-blue-dark py-5 ps-5">
           <h5 class="text-light ovo">FOLLOW US:</h5>
           <a href="https://www.facebook.com/dacapomusic.ca/"><i class="fab fa-facebook-square fa-3x ps-0 pe-2"></i></a>
           <a href="https://www.instagram.com/dacapomusic.ca/"><i class="fab fa-instagram-square fa-3x p-2"></i></a>
           <a href="https://www.youtube.com/watch?v=gSPAOkyO4AA"><i class="fab fa-youtube-square fa-3x p-2"></i></a>
       </div>
 
-      <div class="col-lg-3 dcam-blue-dark py-3">
-        <h5 class="text-light ovo">WHAT WE OFFER:</h5>
+      <div class="col-sm-6 col-lg-3 dcam-blue-dark py-5 ps-5">
+        <h5 class="text-light ovo mb-3">WHAT WE OFFER:</h5>
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link py-1 ps-0" href="#">Piano Lessons</a>
+            <a class="nav-link py-2 ps-0 d-inline-block" href="#">Piano Lessons</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link py-1 ps-0" href="#">Guitar Lessons</a>
+            <a class="nav-link py-2 ps-0 d-inline-block" href="#">Guitar Lessons</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link py-1 ps-0" href="#">Drum Lessons</a>
+            <a class="nav-link py-2 ps-0 d-inline-block" href="#">Drum Lessons</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link py-1 ps-0" href="#">Voice Lessons</a>
+            <a class="nav-link py-2 ps-0 d-inline-block" href="#">Voice Lessons</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link py-1 ps-0" href="#">Theory Lessons</a>
+            <a class="nav-link py-2 ps-0 d-inline-block" href="#">Theory Lessons</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link py-1 ps-0" href="#">Intro to Music Program</a>
+            <a class="nav-link py-2 ps-0 d-inline-block" href="#">Intro to Music Program</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link py-1 ps-0" href="#">Toddler Classes</a>
+            <a class="nav-link py-2 ps-0 d-inline-block" href="#">Toddler Classes</a>
           </li>
 
         </ul>
 
       </div>
 
-      <div class="col-lg-3 dcam-blue-dark py-3">
-        <h5 class="text-light ovo">LEARN MORE:</h5>
+      <div class="col-sm-6 col-lg-3 dcam-blue-dark py-5 ps-5">
+        <h5 class="text-light ovo mb-3">LEARN MORE:</h5>
 
         <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link py-1 ps-0" href="#">About Us</a>
+              <a class="nav-link py-2 ps-0 d-inline-block" href="#">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link py-1 ps-0" href="#">Teachers</a>
+              <a class="nav-link py-2 ps-0 d-inline-block" href="#">Teachers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link py-1 ps-0" href="#">Rates</a>
+              <a class="nav-link py-2 ps-0 d-inline-block" href="#">Rates</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link py-1 ps-0" href="#">Blog</a>
+              <a class="nav-link py-2 ps-0 d-inline-block" href="#">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link py-1 ps-0" href="#">Shop</a>
+              <a class="nav-link py-2 ps-0 d-inline-block" href="#">Shop</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link py-1 ps-0" href="#">Privacy Policy</a>
+              <a class="nav-link py-2 ps-0 d-inline-block" href="#">Privacy Policy</a>
             </li>
         </ul>
 
       </div>
 
-      <div class="col-lg-3 dcam-blue-dark py-3">
-          <h5 class="text-light ovo">CONTACT US:</h5>
+      <div class="col-sm-6 col-lg-3 dcam-blue-dark py-5 ps-5">
+          <h5 class="text-light ovo mb-3">CONTACT US:</h5>
 
         <ul class="nav flex-column">
             <li class="nav-item">
-              <a class="nav-link ps-0" href="tel:+14162379595"><i class="fas fa-phone"></i> (416) 237-9595</a>
+              <a class="nav-link pt-2 pb-3 ps-0 d-inline-block" href="tel:+14162379595"><i class="fas fa-phone"></i> (416) 237-9595</a>
             </li>
             <li class="nav-item">
-              <a  class="nav-link ps-0" href="mailto:info@dacapomusic.ca"><i class="fas fa-envelope"></i> info@dacapomusic.ca</a>
+              <a  class="nav-link py-3 ps-0 d-inline-block" href="mailto:info@dacapomusic.ca"><i class="fas fa-envelope"></i> info@dacapomusic.ca</a>
             </li>
             <li class="nav-item">
-              <a  class="nav-link ps-0" href="https://g.page/dacapomusic-ca?share" target="_blank"><i class="fas fa-map-marker-alt"></i> 270 The Kingsway,<br> Etobicoke, ON<br> M9A 3T7<br>(Humbertown Shopping Centre)</a>
+              <a  class="nav-link py-3 ps-0 d-inline-block" href="https://g.page/dacapomusic-ca?share" target="_blank"><i class="fas fa-map-marker-alt"></i> 270 The Kingsway,<br> Etobicoke, ON<br> M9A 3T7<br>(Humbertown Shopping Centre)</a>
             </li>
 
         </ul>
