--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Music Lessons</a>
-                    <ul class="dropdown-menu dcam-blue-reg" aria-labelledby="navbarDropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="lessonsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Music Lessons</a>
+                    <ul class="dropdown-menu dcam-blue-reg" aria-labelledby="lessonsDropdown">
                       <li><a class="dropdown-item" href="#">Piano Lessons</a></li>
                       <li><a class="dropdown-item" href="#">Guitar Lessons</a></li>
                       <li><a class="dropdown-item" href="#">Drum Lessons</a></li>
@@ -78,10 +78,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Gallery</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
-                </li>
-                <li class="nav-item">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
+                  <ul class="dropdown-menu dcam-blue-reg" aria-labelledby="aboutDropdown">
+                    <li><a class="dropdown-item" href="mission.html">Our Mission</a></li>
+                    <li><a class="dropdown-item" href="#">Our Story</a></li>
+                  </ul>
+              </li>
+              <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
@@ -386,7 +390,7 @@
 </div>
 
 <!-- FOOTER SECTION -->
-<div class="container-fluid">
+<div class="container-fluid mt-5">
   <div class="row">
 
       <div class="col-sm-6 col-lg-3 dcam-blue-dark py-5 ps-5">
@@ -473,8 +477,8 @@
       <div class="col-12 text-muted bg-dark py-2 text-center">
           <small>&copy 2021 Da Capo Academy of Music Inc.</small>
       </div>
-  </div><!--/row-->
-</div>
+  </div><!--/footer row-->
+</div><!--/footer container-->
 
 
 
