added our-story.html page

--- a/rates.html
+++ b/rates.html
@@ -81,8 +81,8 @@
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
                     <ul class="dropdown-menu dcam-blue-reg" aria-labelledby="aboutDropdown">
-                      <li><a class="dropdown-item" href="mission.html">Our Mission</a></li>
-                      <li><a class="dropdown-item" href="#">Our Story</a></li>
+                      <li><a class="dropdown-item" href="our-mission.html">Our Mission</a></li>
+                      <li><a class="dropdown-item" href="our-story.html">Our Story</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
