--- a/our-story.html
+++ b/our-story.html
@@ -79,10 +79,10 @@
                       <a class="nav-link" href="#">Gallery</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
+                    <a class="nav-link active dropdown-toggle" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
                     <ul class="dropdown-menu dcam-blue-reg" aria-labelledby="aboutDropdown">
-                      <li><a class="dropdown-item" href="mission.html">Our Mission</a></li>
-                      <li><a class="dropdown-item" href="story.html">Our Story</a></li>
+                      <li><a class="dropdown-item" href="our-mission.html">Our Mission</a></li>
+                      <li><a class="dropdown-item" href="#">Our Story</a></li>
                     </ul>
                 </li>
                     <li class="nav-item">
@@ -102,37 +102,25 @@
 
 <div class="container my-5">
 
-<h3 class="display-4 text-muted">Our Mission</h3>
-<hr>
+<h3 class="display-4 text-muted">Our Story</h3>
+<hr class="mb-5">
 
-    <div class="row-10 m-auto my-5">
-        <div class="text-center">
-            <img src="img/mission.png" class="img-fluid rounded img-thumbnail mb-5">
-        </div>
-
-        <h5 class="pb-5">At DCAM, we are serious about our mission, which is three-fold:</h5>
-
-        <div class="mb-5">
-            <h5>1. To enrich the lives of our students through music</h5>
-            <p>We strongly believe that playing a musical instrument makes life richer, more interesting and more colourful. We are proud to be able to impart this skill to our students.</p>
-        </div>
-        
-        <div class="mb-5">
-            <h5>2. To provide quality music education tailored to our students’ goals, abilities, and interests</h5>
-            <p>We listen to our students and parents carefully and do our best to tailor their lessons in a way that would best meet their individual goals, abilities, and interests.</p>
-        </div>
-
-        <div class="mb-5">
-            <h5>3. To create a fun, safe, friendly, and inclusive environment for both students and teachers</h5>
-            <p>We are convinced that individuals learn and work best in an environment that is fun, safe, friendly, and inclusive. Maintaining such an environment is one of our top priorities.</p>
-        </div>
-        
-    </div><!--content row-->
-</div><!--content container-->
+<div class="row g-0">
+    <div class="col-md-4 text-center text-md-start">
+      <img src="img/school.JPG" class="img-fluid rounded img-thumbnail" alt="...">
+    </div>
+    <div class="col-md-8">
+      <div class="card-body ms-3">
+        <h5 class="card-title mb-4">A brief history of DCAM:</h5>
+        <p class="card-text">Da Capo Academy of Music (DCAM) began as an in-home piano studio and opened its doors at Humbertown Shopping Centre in September 2018. Our name comes from the Italian musical term “Da Capo”, which translates to “from the top” – hence our slogan: “Teaching music from the top!” At DCAM, we offer private music lessons to students of all ages and skill levels and also prepare them for RCM exams (Royal Conservatory of Music), recitals, auditions, and competitions. To showcase their progress, students have an opportunity to participate in one or both of our bi-annual music recitals. We are passionate about music and love to pass this passion on to our students! Whether you are a parent wanting to start your child on a musical path or an adult who has finally decided seriously start learning a music instrument – we would love to have you at our school!</p>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 <!-- FOOTER SECTION -->
-<div class="container-fluid">
+<div class="container-fluid mt-5">
     <div class="row">
   
         <div class="col-sm-6 col-lg-3 dcam-blue-dark py-5 ps-5">
