--- a/index.html
+++ b/index.html
@@ -15,31 +15,31 @@
 </head>
 <body>
 
-    <div class="container-fluid bg-dcam bg-light">
-        <div class="row">
+  <div class="container-fluid bg-dcam bg-light">
+    <div class="row">
 
-            <div class="col-lg-3 col-xxl-3 p-3 text-center text-lg-left">
-                <a href="#"><img class="img-fluid w-75" src="img/logo.png" alt="Da Capo Academy of Music Logo"></a>
+        <div class="col-lg-3 col-xxl-3 p-3 text-center text-lg-left">
+            <a href="index.html"><img class="img-fluid w-75" src="img/logo.png" alt="Da Capo Academy of Music Logo"></a>
+        </div>
+
+        <div class="col-lg-6 col-xxl-7 text-center p-5">
+            <h1 class="display-4 ovo">Music Lessons in Etobicoke</h1>
+            <p class="lead">Discover the joy that music can bring, register for your free trial today!</p>
+
+            <div class="d-md-flex justify-content-center mt-5">
+                    <!-- <div class="btn btn-success btn-lg mb-3 mb-sm-0 me-3 text-nowrap">Free Trial Lesson</div> -->
+                    <button type="button" class="btn btn-success btn-lg mb-3 mb-sm-0 me-3 text-nowrap" data-bs-toggle="modal" data-bs-target="#trialModal"><i class="fas fa-music fa-sm"></i> Free Trial Lesson</button>
+                    <div class="btn btn-primary btn-lg mt-3 mt-sm-0 ms-3 text-nowrap"><i class="fas fa-file-pdf fa-sm"></i> Download Info Pack</div>
             </div>
+        </div>
+        <div class="col-lg-3 col-xxl-2 d-flex p-5 flex-column justify-content-center filter text-light text-center">
+            <h3 class="ovo">Contact Us:</h3>
+            <a role="button" class="btn text-light text-nowrap" href="tel:+14162379595"><i class="fas fa-phone"></i> (416) 237-9595</a>
+            <a role="button" class="btn text-light text-nowrap" href="mailto:info@dacapomusic.ca"><i class="fas fa-envelope"></i> info@dacapomusic.ca</a>
+        </div>
 
-            <div class="col-lg-6 col-xxl-7 text-center p-5">
-                <h1 class="display-4 ovo">Music Lessons in Etobicoke</h1>
-                <p class="lead">Discover the joy that music can bring, register for your free trial today!</p>
-
-                <div class="d-md-flex justify-content-center mt-5">
-                        <!-- <div class="btn btn-success btn-lg mb-3 mb-sm-0 me-3 text-nowrap">Free Trial Lesson</div> -->
-                        <button type="button" class="btn btn-success btn-lg mb-3 mb-sm-0 me-3 text-nowrap" data-bs-toggle="modal" data-bs-target="#trialModal"><i class="fas fa-music fa-sm"></i> Free Trial Lesson</button>
-                        <div class="btn btn-primary btn-lg mt-3 mt-sm-0 ms-3 text-nowrap"><i class="fas fa-file-pdf fa-sm"></i> Download Info Pack</div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-xxl-2 d-flex p-5 flex-column justify-content-center filter text-light text-center">
-                <h3 class="ovo">Contact Us:</h3>
-                <a role="button" class="btn text-light text-nowrap" href="tel:+14162379595"><i class="fas fa-phone"></i> (416) 237-9595</a>
-                <a role="button" class="btn text-light text-nowrap" href="mailto:info@dacapomusic.ca"><i class="fas fa-envelope"></i> info@dacapomusic.ca</a>
-            </div>
-
-        </div><!--/row-->
-    </div><!--/header container-->
+    </div><!--/row-->
+</div><!--/header container-->
 
 
 <!-- navbar -->
@@ -192,19 +192,50 @@
 
 <!-- WELCOME SECTION -->
 
-<div class="container py-5">
-<div class="card mb-3 mx-auto" style="max-width: 1000px;">
-  <div class="row g-0">
-    <div class="col-md-4 text-center text-md-start">
-      <img src="img/student.png" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title mb-4">Start learning your favourite instrument today!</h5>
-        <p class="card-text">Located in Etobicoke (Humber Valley Village), we offer music lessons to students of all ages and skill levels. The word “Da Capo” is an Italian musical term meaning “from the top”, indicating that a piece of music is to be played from the beginning. We thought this was a perfect name for our school, as our intent is to teach music to students “from the top”! Please explore our website to learn more about us. Have a question? Call us or fill out a “Contact Us” form and we will get back to you as possible. Interested in music lessons with us? Awesome! Fill out our “Free Trial Lesson” form and we will contact you to schedule your free, no-obligation trial lesson! (Learn more about who we are on our About Us page.</p>
+<div class="container">
+
+<!--SLIDER SECTION-->
+  <div class="row mb-5">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/slider1.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/slider2.png" class="d-block w-100" alt="...">
+        </div>
       </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
   </div>
+  </div>
+<!--/SLIDER SECTION-->
+
+
+<!--WELCOME SECTION-->
+
+<div class="container-fluid py-5 dcam-blue-light">
+<div class="row">
+    <div class="card mx-auto p-0" style="max-width: 1000px;">
+      <div class="row g-0">
+        <div class="col-md-4 text-center text-md-start">
+          <img src="img/student.png" class="img-fluid rounded-start" alt="...">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title mb-4">Start learning your favourite instrument today!</h5>
+            <p class="card-text">Located in Etobicoke (Humber Valley Village), we offer music lessons to students of all ages and skill levels. The word “Da Capo” is an Italian musical term meaning “from the top”, indicating that a piece of music is to be played from the beginning. We thought this was a perfect name for our school, as our intent is to teach music to students “from the top”! Please explore our website to learn more about us. Have a question? Call us or fill out a “Contact Us” form and we will get back to you as possible. Interested in music lessons with us? Awesome! Fill out our “Free Trial Lesson” form and we will contact you to schedule your free, no-obligation trial lesson! (Learn more about who we are on our About Us page.</p>
+          </div>
+        </div>
+      </div>
+    </div>
 </div>
 </div>
 
