--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
             <div class="d-md-flex justify-content-center mt-5">
                     <!-- <div class="btn btn-success btn-lg mb-3 mb-sm-0 me-3 text-nowrap">Free Trial Lesson</div> -->
-                    <button type="button" class="btn btn-success btn-lg mb-3 mb-sm-0 me-3 text-nowrap" data-bs-toggle="modal" data-bs-target="#trialModal"><i class="fas fa-music fa-sm"></i> Free Trial Lesson</button>
-                    <div class="btn btn-primary btn-lg mt-3 mt-sm-0 ms-3 text-nowrap"><i class="fas fa-file-pdf fa-sm"></i> Download Info Pack</div>
+                    <button type="button" class="btn btn-success btn-lg mb-3 mb-sm-0 me-3 text-nowrap" data-bs-toggle="modal" data-bs-target="#trialModal">Free Trial Lesson</button>
+                    <div class="btn btn-primary btn-lg mt-3 mt-sm-0 ms-3 text-nowrap">Download Info Pack</div>
             </div>
         </div>
         <div class="col-lg-3 col-xxl-2 d-flex p-5 flex-column justify-content-center filter text-light text-center">
@@ -192,30 +192,53 @@
 
 <!-- WELCOME SECTION -->
 
-<div class="container">
 
 <!--SLIDER SECTION-->
+
+<div class="container">
   <div class="row mb-5">
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="img/slider1.png" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="img/slider2.png" class="d-block w-100" alt="...">
-        </div>
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/slider/avery1.jpg" class="d-block w-25 mx-auto" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/slider/mateo1.jpg" class="d-block w-25 mx-auto" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/slider/mia1.jpg" class="d-block w-25 mx-auto" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/slider/nastya1.jpg" class="d-block w-25 mx-auto" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/slider/nikhil1.jpg" class="d-block w-25 mx-auto" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/slider/peter1.jpg" class="d-block w-25 mx-auto" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/slider/sarah1.jpeg" class="d-block w-25 mx-auto" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/slider/sean1.jpeg" class="d-block w-25 mx-auto" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="img/slider/sophia2.jpg" class="d-block w-25 mx-auto" alt="...">
+              </div>
+          </div>
+
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
   </div>
-  </div>
+</div>
 <!--/SLIDER SECTION-->
 
 
