--- a/our-mission.html
+++ b/our-mission.html
@@ -54,8 +54,8 @@
                       <a class="nav-link" href="index.html">Home</a>
                   </li>
                   <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Music Lessons</a>
-                      <ul class="dropdown-menu dcam-blue-reg" aria-labelledby="navbarDropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="lessonsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Music Lessons</a>
+                      <ul class="dropdown-menu dcam-blue-reg" aria-labelledby="lessonsDropdown">
                         <li><a class="dropdown-item" href="#">Piano Lessons</a></li>
                         <li><a class="dropdown-item" href="#">Guitar Lessons</a></li>
                         <li><a class="dropdown-item" href="#">Drum Lessons</a></li>
@@ -79,10 +79,10 @@
                       <a class="nav-link" href="#">Gallery</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link active dropdown-toggle" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
+                    <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
                     <ul class="dropdown-menu dcam-blue-reg" aria-labelledby="aboutDropdown">
-                      <li><a class="dropdown-item" href="mission.html">Our Mission</a></li>
-                      <li><a class="dropdown-item" href="story.html">Our Story</a></li>
+                      <li><a class="dropdown-item" href="our-mission.html">Our Mission</a></li>
+                      <li><a class="dropdown-item" href="our-story.html">Our Story</a></li>
                     </ul>
                 </li>
                     <li class="nav-item">
@@ -223,5 +223,6 @@
   </div><!--/footer container-->
   
 
+<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
