--- a/our-story.html
+++ b/our-story.html
@@ -82,7 +82,7 @@
                     <a class="nav-link active dropdown-toggle" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">About Us</a>
                     <ul class="dropdown-menu dcam-blue-reg" aria-labelledby="aboutDropdown">
                       <li><a class="dropdown-item" href="our-mission.html">Our Mission</a></li>
-                      <li><a class="dropdown-item" href="#">Our Story</a></li>
+                      <li><a class="dropdown-item" href="our-story.html">Our Story</a></li>
                     </ul>
                 </li>
                     <li class="nav-item">
@@ -211,5 +211,7 @@
   </div><!--/footer container-->
   
 
+
+<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
